# eta-scala-interop

./: ChangeLog.md  LICENSE  eta-scala-interop.cabal
src/Interop/: Scala.hs
