name:                eta-scala-interop
version:             0.1.3.0
synopsis:            Utilities for interoperating with Scala.
description:         Utilities for interoperating with Scala.
license:             BSD3
license-file:        LICENSE
author:              Rahul Muttineni, Jyothsna Patnam
maintainer:          jyothsnasrinivas17@gmail.com
copyright:           Copyright (c) Rahul Muttineni 2017
                               (c) Jyothsna Patnam 2017
category:            Interop
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

library
  exposed-modules:     Interop.Scala
  build-depends:       base >=4.8 && <4.11
  hs-source-dirs:      src
  default-language:    Haskell2010

source-repository this
  type: git
  location: https://github.com/typelead/eta-scala-interop
  tag: 0.1.3.0 
